# OpenSW

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  LICENSE-APACHE  README.ja.md  README.md  eslint.config.js  package.json  renovate.json
.github/workflows/: ci.yml
openspec/changes/archive/2025-12-02-establish-audio-io/: proposal.md  tasks.md
openspec/changes/archive/2025-12-02-establish-audio-io/specs/audio-playback/: spec.md
openspec/changes/archive/2025-12-02-establish-audio-io/specs/audio-recording/: spec.md
openspec/changes/archive/2025-12-02-establish-audio-io/specs/audio-storage/: spec.md
openspec/changes/archive/2025-12-02-integrate-ollama-clipboard/: design.md
openspec/changes/archive/2025-12-02-integrate-ollama-clipboard/specs/clipboard-integration/: spec.md
openspec/changes/archive/2025-12-02-integrate-ollama-clipboard/specs/ollama-integration/: spec.md
openspec/changes/archive/2025-12-02-integrate-whisper-local/: proposal.md  tasks.md
openspec/changes/establish-audio-io/: design.md  proposal.md  tasks.md
openspec/changes/establish-audio-io/specs/audio-playback/: spec.md
openspec/changes/establish-audio-io/specs/audio-recording/: spec.md
openspec/changes/establish-audio-io/specs/audio-storage/: spec.md
openspec/changes/integrate-ollama-clipboard/: design.md  proposal.md  tasks.md
openspec/changes/integrate-ollama-clipboard/specs/clipboard-integration/: spec.md
openspec/changes/integrate-ollama-clipboard/specs/ollama-integration/: spec.md
openspec/changes/integrate-whisper-local/: design.md
openspec/changes/integrate-whisper-local/specs/audio-transcription/: spec.md
openspec/specs/audio-playback/: spec.md
openspec/specs/audio-recording/: spec.md
openspec/specs/audio-storage/: spec.md
openspec/specs/audio-transcription/: spec.md
openspec/specs/clipboard-integration/: spec.md
openspec/specs/ollama-integration/: spec.md
release/: latest.json
scripts/: check-version-sync.sh  generate-latest-json.mjs  generate-readme-logo.js  tauri-build.mjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  audio_utils.rs  clipboard.rs  main.rs  ollama.rs  tray.rs
src/components/: AudioRecorder.tsx  OllamaSettings.tsx  RecordingStatus.tsx  UpdateChecker.tsx
