[package]
name = "open-sw"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15.3"
hound = "3.5.1"
rodio = "0.17.3"
rubato = "0.14"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
arboard = "3.3"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.13", features = ["metal"] }

[target.'cfg(target_os = "windows")'.dependencies]
whisper-rs = { version = "0.13", features = ["cuda"] }

[target.'cfg(target_os = "linux")'.dependencies]
whisper-rs = { version = "0.13" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
