[package]
name = "opensw"
version = "0.1.1"
description = "Cross-platform speech-to-text desktop application using Whisper"
authors = ["liebe-magi"]
license = "MIT OR Apache-2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.17.0"
hound = "3.5.1"
rodio = "0.21.0"
rubato = "1.0"
audioadapter-buffers = "2.0"
anyhow = "1.0"
reqwest = { version = "0.13", features = ["json", "blocking"] }
arboard = "3.3"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tokio = { version = "1.48.0", features = ["process", "time"] }

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.15", features = ["metal"] }

[target.'cfg(target_os = "windows")'.dependencies]
whisper-rs = { version = "0.15", features = ["cuda"] }

[target.'cfg(target_os = "linux")'.dependencies]
whisper-rs = { version = "0.15", features = ["cuda"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
